add param for grade
